--- a/package.json
+++ b/package.json
@@ -5,8 +5,7 @@
   "main": "./dist/main.js",
   "scripts": {
     "build": "tsc",
-    "prestart": "pnpm build",
-    "start": "node ./dist/main.js",
+    "start": "pnpm build && node ./dist/main.js",
     "dev": "nodemon ./src/main.ts",
     "test": "jest -i --no-cache --coverage --colors --verbose --detectOpenHandles --forceExit"
   },
